# claude-agent-rs

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.ko.md  README.md  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/: architecture.md  authentication.md  budget.md  cloud-providers.md  hooks.md  mcp.md  memory-system.md  models.md  observability.md  output-styles.md  permissions.md  plugins.md  sandbox.md  security.md  session.md  skills.md  subagents.md  tokens.md  tools.md
examples/: advanced_test.rs  agent_loop.rs  all_tools_test.rs  comprehensive_test.rs  direct_verification.rs  integration_test.rs  sandbox_verification.rs  sdk_core_test.rs  server_tools.rs  simple_query.rs  streaming.rs
src/: lib.rs  prelude.rs
src/agent/: common.rs  config.rs  context.rs  events.rs  execution.rs  executor.rs  interaction.rs  mod.rs  options.rs  plan.rs  request.rs  state.rs  state_formatter.rs  streaming.rs  task.rs  task_output.rs  task_registry.rs
src/agent/options/: build.rs  builder.rs  cli.rs  mod.rs
src/agent/tests/: helpers.rs  mod.rs
src/auth/: cache.rs  config.rs  credential.rs  helper.rs  mod.rs  provider.rs
src/auth/providers/: chain.rs  cli.rs  environment.rs  explicit.rs  mod.rs
src/auth/storage/: file.rs  keychain.rs  mod.rs
src/auth/strategy/: api_key.rs  bedrock.rs  env.rs  foundry.rs  mod.rs  oauth.rs  traits.rs  vertex.rs
src/budget/: manager.rs  mod.rs  pricing.rs  tracker.rs
src/client/: batch.rs  config.rs  error.rs  fallback.rs  files.rs  gateway.rs  messages.rs  mod.rs  models.rs  network.rs  recovery.rs  schema.rs  streaming.rs
src/client/adapter/: anthropic.rs  base.rs  bedrock.rs  config.rs  foundry.rs  mod.rs  request.rs  token_cache.rs  traits.rs  vertex.rs
src/client/messages/: config.rs  context.rs  mod.rs  request.rs  types.rs
src/client/resilience/: backoff.rs  circuit.rs  mod.rs
src/common/: content_source.rs  directory.rs  file_provider.rs  frontmatter.rs  index.rs  index_loader.rs  index_registry.rs  mod.rs  path_matched.rs  provider.rs  registry.rs  serde_defaults.rs  source_type.rs  tool_matcher.rs
src/config/: cloud.rs  composite.rs  env.rs  file.rs  memory.rs  mod.rs  provider.rs  settings.rs  validator.rs
src/context/: builder.rs  import_extractor.rs  level.rs  memory_loader.rs  mod.rs  orchestrator.rs  provider.rs  routing.rs  rule_index.rs  skill_index.rs  static_context.rs
src/extension/: mod.rs  registry.rs
src/hooks/: command.rs  manager.rs  mod.rs  rule.rs  traits.rs
src/mcp/: client.rs  manager.rs  mod.rs  resources.rs  toolset.rs
src/models/: builtin.rs  family.rs  mod.rs  provider.rs  registry.rs  spec.rs
src/observability/: metrics.rs  mod.rs  otel.rs  spans.rs
src/output_style/: builtin.rs  generator.rs  loader.rs  mod.rs  provider.rs
src/permissions/: mod.rs  modes.rs  rules.rs
src/plugins/: discovery.rs  error.rs  loader.rs  manager.rs  manifest.rs  mod.rs  namespace.rs
src/prompts/: base.rs  coding.rs  environment.rs  identity.rs  mod.rs  subagents.rs  system.rs  tools.rs
src/prompts/skills/: commit.txt
src/security/: error.rs  guard.rs  mod.rs
src/security/bash/: env.rs  mod.rs  parser.rs
src/security/fs/: handle.rs  mod.rs
src/security/limits/: mod.rs  rlimit.rs
src/security/path/: mod.rs  resolver.rs
src/security/policy/: mod.rs
src/security/sandbox/: config.rs  error.rs  landlock.rs  macos.rs  mod.rs  network.rs
src/session/: cache.rs  compact.rs  manager.rs  mod.rs  persistence.rs  persistence_jsonl.rs  persistence_postgres.rs  persistence_redis.rs  queue.rs  session_state.rs  state.rs  types.rs
src/session/state/: config.rs  enums.rs  ids.rs  message.rs  mod.rs  policy.rs
src/skills/: commands.rs  executor.rs  index.rs  index_loader.rs  loader.rs  mod.rs  processing.rs  provider.rs  registry.rs  skill_tool.rs
src/subagents/: builtin.rs  index.rs  index_loader.rs  loader.rs  mod.rs  provider.rs
src/tokens/: budget.rs  mod.rs  tier.rs  tracker.rs  window.rs
src/tools/: access.rs  bash.rs  builder.rs  context.rs  edit.rs  env.rs  glob.rs  grep.rs  kill.rs  matcher.rs  mcp.rs  mod.rs  plan.rs  process.rs  read.rs  registry.rs  testing.rs  todo.rs  traits.rs  write.rs
src/tools/notebook/: edit.rs  mod.rs
src/tools/search/: engine.rs  index.rs  manager.rs  mod.rs
src/tools/web/: fetch.rs  mod.rs  search.rs
src/types/: citations.rs  content.rs  document.rs  message.rs  mod.rs  models.rs  response.rs  search.rs  tool.rs
src/types/content/: image.rs  mod.rs  server_tools.rs  tool_blocks.rs
src/types/tool/: definition.rs  error.rs  mod.rs  output.rs  reference.rs  server.rs
tests/: cli_comparison_tests.rs  cli_integration_tests.rs  comprehensive_live_verification.rs  context_and_session_tests.rs  e2e_cli_verification.rs  e2e_complete_verification.rs  full_cli_verification.rs  live_cli_auth_tests.rs  live_comprehensive_verification.rs  new_features_verification.rs  progressive_disclosure_test.rs  progressive_disclosure_tests.rs  sdk_complete_verification.rs  sdk_core_tests.rs  sdk_verification_suite.rs  security_and_permissions_tests.rs
